pin brave-core to 60f5db1b7a822584fcc8e207d3025b6be54d2e69 from PR-1457

--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
       },
       "brave-core": {
         "dir": "src/brave",
-        "branch": "master",
         "repository": {
           "url": "https://github.com/brave/brave-core.git"
-        }
+        },
+        "commit": "60f5db1b7a822584fcc8e207d3025b6be54d2e69"
       }
     }
   },
