pin brave-core to a80de7eac7a34517cbf2d48c37606629495791e8 from PR-1464

--- a/package.json
+++ b/package.json
@@ -42,10 +42,10 @@
       },
       "brave-core": {
         "dir": "src/brave",
-        "branch": "master",
         "repository": {
           "url": "https://github.com/brave/brave-core.git"
-        }
+        },
+        "commit": "a80de7eac7a34517cbf2d48c37606629495791e8"
       }
     }
   },
